swagger errands
